# src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose from "mongoose";
 import { encrypt } from "../untils/encryption";
+import { sendMail, renderMailHtml } from "../untils/mail/mail";
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../untils/env";
 
 export interface User {
     fullName: string;
@@ -10,6 +12,7 @@ export interface User {
     profilePicture: string;
     isActivated: boolean;
     activationCode: string;
+    createdAt?: Date;
 };
 
 const Schema = mongoose.Schema;
@@ -21,11 +24,13 @@ const UserSchema = new Schema<User>({
     },
     username: {
         type: Schema.Types.String,
-        required: true
+        required: true,
+        unique: true
     },
     email: {
         type: Schema.Types.String,
-        required: true
+        required: true,
+        unique: true
     },
     password: {
         type: Schema.Types.String,
@@ -51,11 +56,42 @@ const UserSchema = new Schema<User>({
     timestamps: true
 });
 
-UserSchema.pre("save", function (next){
+UserSchema.pre("save", function (next) {
     const user = this;
 
     user.password = encrypt(user.password);
+    user.activationCode = encrypt(user.id);
+
+    console.log(user.id, user.activationCode, user.username);
     next();
+});
+
+UserSchema.post("save", async function (doc, next) {
+    try {
+        const user = doc;
+
+        console.log('Send Email', user);
+
+        const contentMail = await renderMailHtml('registration-success', {
+            fullName: user.fullName,
+            username: user.username,
+            email: user.email,
+            createdAt: user.createdAt,
+            activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`
+
+        });
+
+        await sendMail({
+            from: EMAIL_SMTP_USER,
+            to: user.email,
+            subject: 'Account Activation',
+            html: contentMail
+        });
+    } catch (error) {
+        console.error(error);
+    } finally {
+        next();
+    }
 });
 
 UserSchema.methods.toJSON = function () {
